packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__should_destructure_args.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 3618
expression: output
---
==INPUT==


		import { component$ } from "@builder.io/qwik";

		// the count results in _fnSignal because of the rename
		// would be nice to consider it a prop too
		export default component$(({ message, id, count: c, ...rest }: Record<string, any>) => {
			const renders = useStore({ renders: 0 }, { reactive: false });
			renders.renders++;
			const rerenders = renders.renders + 0;
			return (
				<div id={id}>
					<span {...rest}>
					{message} {c}
					</span>
					<div class="renders">{rerenders}</div>
				</div>
			);
		}
		);
	
============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
// the count results in _fnSignal because of the rename
// would be nice to consider it a prop too
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test_component_luxexe0dqrg"), "test_component_LUXeXe0DQrg"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGE,uDAAuD;AACvD,0CAA0C;AAC1C,6BAAe,0GAab\"}")
============================= test_component_luxexe0dqrg.js (ENTRY POINT)==

import { _jsxSorted } from "@builder.io/qwik";
import { _jsxSplit } from "@builder.io/qwik";
import { _restProps } from "@builder.io/qwik";
import { _wrapProp } from "@builder.io/qwik";
export const test_component_LUXeXe0DQrg = (props)=>{
    const rest = _restProps(props, [
        "message",
        "id",
        "count"
    ]);
    const renders = useStore({
        renders: 0
    }, {
        reactive: false
    });
    renders.renders++;
    const rerenders = renders.renders + 0;
    return /*#__PURE__*/ _jsxSorted("div", null, {
        id: _wrapProp(props, "id")
    }, [
        /*#__PURE__*/ _jsxSplit("span", {
            ...rest
        }, null, [
            _wrapProp(props, "message"),
            " ",
            _wrapProp(props, "count")
        ], 0, null),
        /*#__PURE__*/ _jsxSorted("div", null, {
            class: "renders"
        }, rerenders, 1, null)
    ], 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;0CAK4B;;;;;;IACzB,MAAM,UAAU,SAAS;QAAE,SAAS;IAAE,GAAG;QAAE,UAAU;IAAM;IAC3D,QAAQ,OAAO;IACf,MAAM,YAAY,QAAQ,OAAO,GAAG;IACpC,qBACC,WAAC;QAAI,EAAE;;sBACN,UAAC;YAAM,GAAG,IAAI;;;YACL;;;sBAET,WAAC;YAAI,OAAM;WAAW;;AAGzB\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test_component_luxexe0dqrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    183,
    524
  ]
}
*/
== DIAGNOSTICS ==

[]
