packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__should_handle_dangerously_set_inner_html.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 3648
expression: output
---
==INPUT==


		import { component$ } from "@builder.io/qwik";
		const Cmp = component$(() => {
			const htmlSignal = useSignal("<h2><span>I'm a signal value!</span></h2>");
			return (
				<div>
					<div>
						<span id="first" dangerouslySetInnerHTML="vanilla HTML here" />
					</div>
					<div>
						<span id="second" dangerouslySetInnerHTML="<h1>I'm an h1!</h1>" class="after" />
					</div>
					<div>
						<span id="third" dangerouslySetInnerHTML={htmlSignal.value} class="after" />
						<button
							onClick$={() =>
								(htmlSignal.value = "<h2><span>I'm a updated signal value!</span></h2>")
							}
						></button>
					</div>
				</div>
			);
		});
		
============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./cmp_component_4rykjtokjwe"), "Cmp_component_4ryKJTOKjWE"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;cAEc\"}")
============================= cmp_component_div_div_button_onclick_3ra5dio0esa.js (ENTRY POINT)==

import { useLexicalScope } from "@builder.io/qwik";
export const Cmp_component_div_div_button_onClick_3Ra5dio0eSA = ()=>{
    const [htmlSignal] = useLexicalScope();
    return htmlSignal.value = "<h2><span>I'm a updated signal value!</span></h2>";
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";gEAeiB;;WACR,WAAW,KAAK,GAAG\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_div_div_button_onClick_3Ra5dio0eSA",
  "entry": null,
  "displayName": "Cmp_component_div_div_button_onClick",
  "hash": "3Ra5dio0eSA",
  "canonicalFilename": "cmp_component_div_div_button_onclick_3ra5dio0esa",
  "path": "",
  "extension": "js",
  "parent": "Cmp_component_4ryKJTOKjWE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    512,
    598
  ]
}
*/
============================= cmp_component_4rykjtokjwe.js (ENTRY POINT)==

import { _jsxSorted } from "@builder.io/qwik";
import { _wrapProp } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const Cmp_component_4ryKJTOKjWE = ()=>{
    const htmlSignal = useSignal("<h2><span>I'm a signal value!</span></h2>");
    return /*#__PURE__*/ _jsxSorted("div", null, null, [
        /*#__PURE__*/ _jsxSorted("div", null, null, /*#__PURE__*/ _jsxSorted("span", null, {
            id: "first",
            dangerouslySetInnerHTML: "vanilla HTML here"
        }, null, 3, null), 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, /*#__PURE__*/ _jsxSorted("span", null, {
            id: "second",
            dangerouslySetInnerHTML: "<h1>I'm an h1!</h1>",
            class: "after"
        }, null, 3, null), 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            /*#__PURE__*/ _jsxSorted("span", null, {
                id: "third",
                dangerouslySetInnerHTML: _wrapProp(htmlSignal),
                class: "after"
            }, null, 3, null),
            /*#__PURE__*/ _jsxSorted("button", null, {
                onClick$: /*#__PURE__*/ qrl(()=>import("./cmp_component_div_div_button_onclick_3ra5dio0esa"), "Cmp_component_div_div_button_onClick_3Ra5dio0eSA", [
                    htmlSignal
                ])
            }, null, 3, null)
        ], 3, null)
    ], 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;yCAEyB;IACtB,MAAM,aAAa,UAAU;IAC7B,qBACC,WAAC;sBACA,WAAC,iCACA,WAAC;YAAK,IAAG;YAAQ,yBAAwB;;sBAE1C,WAAC,iCACA,WAAC;YAAK,IAAG;YAAS,yBAAwB;YAAsB,OAAM;;sBAEvE,WAAC;0BACA,WAAC;gBAAK,IAAG;gBAAQ,uBAAuB,YAAE;gBAAkB,OAAM;;0BAClE,WAAC;gBACA,QAAQ;;;;;;AAOb\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "cmp_component_4rykjtokjwe",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    76,
    657
  ]
}
*/
== DIAGNOSTICS ==

[]
