packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__ternary_prop.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 3747
expression: output
---
==INPUT==


		import { component$, $, useSignal } from '@builder.io/qwik';
		export const Cmp = component$(() => {
			const toggleSig = useSignal(false);

			const handleClick$ = $(() => {
				toggleSig.value = !toggleSig.value;
			});

			return (
				<button onClick$={handleClick$} data-open={toggleSig.value ? true : undefined}>
					Removing data-open re-renders
				</button>
			);
		});
		
============================= cmp_component_handleclick_wawhv3hws1a.ts (ENTRY POINT)==

import { useLexicalScope } from "@builder.io/qwik";
export const Cmp_component_handleClick_WawHV3HwS1A = ()=>{
    const [toggleSig] = useLexicalScope();
    toggleSig.value = !toggleSig.value;
};
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";qDAK0B;;IACtB,UAAU,KAAK,GAAG,CAAC,UAAU,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_handleClick_WawHV3HwS1A",
  "entry": null,
  "displayName": "Cmp_component_handleClick",
  "hash": "WawHV3HwS1A",
  "canonicalFilename": "cmp_component_handleclick_wawhv3hws1a",
  "path": "",
  "extension": "ts",
  "parent": "Cmp_component_4ryKJTOKjWE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    171,
    223
  ]
}
*/
============================= cmp_component_4rykjtokjwe.ts (ENTRY POINT)==

import { _fnSignal } from "@builder.io/qwik";
import { _jsxSorted } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
import { useSignal } from "@builder.io/qwik";
export const Cmp_component_4ryKJTOKjWE = ()=>{
    const toggleSig = useSignal(false);
    const handleClick$ = /*#__PURE__*/ qrl(()=>import("./cmp_component_handleclick_wawhv3hws1a"), "Cmp_component_handleClick_WawHV3HwS1A", [
        toggleSig
    ]);
    return /*#__PURE__*/ _jsxSorted("button", null, {
        "data-open": _fnSignal((p0)=>p0.value ? true : undefined, [
            toggleSig
        ], "p0.value?true:undefined"),
        onClick$: handleClick$
    }, "Removing data-open re-renders", 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;yCAEgC;IAC7B,MAAM,YAAY,UAAU;IAE5B,MAAM;;;IAIN,qBACC,WAAC;QAA+B,WAAS,kBAAE,GAAU,KAAK,GAAG,OAAO;;;QAA5D,UAAU;OAA6D;AAIjF\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "cmp_component_4rykjtokjwe",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    97,
    381
  ]
}
*/
============================= test.ts ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const Cmp = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./cmp_component_4rykjtokjwe"), "Cmp_component_4ryKJTOKjWE"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAEE,OAAO,MAAM,oBAAM,wGAYhB\"}")
== DIAGNOSTICS ==

[]
