packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__transform_qrl_in_regular_prop.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 3772
expression: output
---
==INPUT==


		import { component$, $ } from '@builder.io/qwik';
		export const Cmp = component$(() =>
			<Cmp foo={$(() => console.log('hi there'))}>Hello Qwik</Cmp>);
		
============================= cmp_component_4rykjtokjwe.ts (ENTRY POINT)==

import { Cmp } from "./test";
import { _jsxSorted } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const Cmp_component_4ryKJTOKjWE = ()=>/*#__PURE__*/ _jsxSorted(Cmp, {
        foo: /*#__PURE__*/ qrl(()=>import("./cmp_component_cmp_foo_ippdemxi0ue"), "Cmp_component_Cmp_foo_iPpdemxi0uE")
    }, null, "Hello Qwik", 3, "u6_0");


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;yCAEgC,kBAC7B,WAAC;QAAI,GAAG;aAAoC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "cmp_component_4rykjtokjwe",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    86,
    155
  ]
}
*/
============================= cmp_component_cmp_foo_ippdemxi0ue.ts (ENTRY POINT)==

export const Cmp_component_Cmp_foo_iPpdemxi0uE = ()=>console.log('hi there');
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"iDAGe,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_Cmp_foo_iPpdemxi0uE",
  "entry": null,
  "displayName": "Cmp_component_Cmp_foo",
  "hash": "iPpdemxi0uE",
  "canonicalFilename": "cmp_component_cmp_foo_ippdemxi0ue",
  "path": "",
  "extension": "ts",
  "parent": "Cmp_component_4ryKJTOKjWE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    107,
    136
  ]
}
*/
============================= test.ts ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const Cmp = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./cmp_component_4rykjtokjwe"), "Cmp_component_4ryKJTOKjWE"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAEE,OAAO,MAAM,oBAAM,wGAC4C\"}")
== DIAGNOSTICS ==

[]
